refactoring for shared classes, wip